--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>C%%Users%HP%Katalon Studio%NAANMUTHALVAN1%NAANMUTHALVAN1.prj</name>
+	<name>C%%Users%HP%Katalon Studio%NAANGOD%NAANGOD.prj</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -17,7 +17,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1718174720067</id>
+			<id>1718261168689</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
@@ -26,7 +26,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1718174720101</id>
+			<id>1718261168703</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
